# director

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  paseo.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
director/: README.md  __init__.py  __main__.py  bench.py  claudecode.py  cli.py  codex.py  config.example.toml  config.py  cost.py  dag.py  gates.py  gitutil.py  guidance.py  init.py  jobctx.py  metrics.py  models.py  opencode.py  pi.py  plan.py  proc.py  provider.py  report.py  review.py  run.py  runtime.py  setup.py  state.py
director/agent/: __init__.py  cli.py  client.py  envfile.py  runner.py  server.py  service.py  storage.py  supervisor.py
director/agent_templates/: brainstorm.md  executor.md  explorer.md  opencode.json  planner.md  reviewer.md  test-author.md
director/web/: __init__.py  agent.html  index.html  server.py
docs/: agent-smoke-tests.md  lessons-learned.md
tests/: test_agent_cli.py  test_agent_envfile.py  test_agent_runner.py  test_agent_server.py  test_agent_service.py  test_agent_storage.py  test_agent_supervisor.py  test_ci_workflow.py  test_claudecode.py  test_claudecode_discovery.py  test_claudecode_runtime.py  test_cli_auto.py  test_cli_init.py  test_cli_sync_agents.py  test_cli_ui.py  test_codex.py  test_codex_dispatch.py  test_config_example_pricing.py  test_config_example_provider.py  test_config_example_runtime.py  test_config_init_message.py  test_config_merge.py  test_config_provider_validation.py  test_config_runtime.py  test_config_target.py  test_director.py  test_dispatch.py  test_docs_config_example.py  test_docs_readme.py  test_examples_neutral.py  test_gate_failure_reporting.py  test_gates.py  test_gates_ignore.py  test_guidance.py  test_init.py  test_init_target.py  test_opencode.py  test_packaging.py  test_pi.py  test_pi_dispatch.py  (+17 more)
