[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "director-cli"
dynamic = ["version"]
description = "Model-agnostic decomposition coding harness — a thin orchestrator over OpenCode"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Christopher Manzi", email = "chris@minimus.tech" }]
keywords = [
    "ai", "agents", "coding-agent", "llm", "orchestration", "decomposition",
    "tdd", "opencode", "code-generation", "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Code Generators",
]
dependencies = []   # standard library only (tomllib, argparse, subprocess, concurrent.futures)

[project.scripts]
director = "director.cli:main"

[project.urls]
Homepage = "https://github.com/manziman/director"
Repository = "https://github.com/manziman/director"
Issues = "https://github.com/manziman/director/issues"
Changelog = "https://github.com/manziman/director/blob/main/CHANGELOG.md"

# --- dev tooling (managed with `uv`) ---------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.6",
    "python-semantic-release>=9.8",
    "build>=1.2",
]

# --- build: single-source version + package data ---------------------------
[tool.hatch.version]
path = "director/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["director"]
# agent_templates/*.md and *.json live inside the package dir → included automatically.

[tool.hatch.build.targets.sdist]
include = ["director", "README.md", "LICENSE", "CHANGELOG.md"]

# --- lint / format ----------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
# E501 (line length) is enforced by the formatter, not the linter.
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

# --- releases: python-semantic-release (conventional commits) --------------
[tool.semantic_release]
version_variables = ["director/__init__.py:__version__"]
commit_parser = "conventional"
build_command = "python -m pip install build && python -m build"
commit_message = "chore(release): {version} [skip ci]\n\nAutomated release."
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.changelog]
default_templates = { changelog_file = "CHANGELOG.md" }
